Replace deprecated boxed constructors with valueOf().